--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>景星 个人主页</title>
   </head>
   <body>
     <noscript>
+      <strong>胸有大海星辰，不负青春。鹰隼试翼，风尘翕张。欢迎来到景星的个人主页。</strong>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
