--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet"> 
     
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>景星 个人主页</title>
